deployments/argo-cd/templates/grafana.yaml
# --- Standalone IngressRoute for Grafana ---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.home.phuchoang.sbs`)
      kind: Rule
      services:
        - name: grafana
          port: 80
