deployments/argo-cd/templates/model-serving.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: model-serving-ingress
  namespace: model-serving
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`fraud.home.phuchoang.sbs`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: fraud-detection
          port: 8000
